--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-big-calendar": "^1.8.12",
+    "moment": "^2.30.1",
     "next": "^14.2.13",
     "re-chart": "^1.0.0",
     "react": "^18",
+    "react-big-calendar": "^1.15.0",
+    "react-calendar": "^5.0.0",
     "react-dom": "^18",
     "recharts": "^2.12.7",
     "remove": "^0.1.5"
